<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/app_background_color"
    tools:context=".SelectRegistrationActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:elevation="10dp"
    android:background="#fff"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:orientation="vertical">
 <ImageView
     android:layout_width="150dp"
     android:layout_height="150dp"
     android:layout_gravity="center"
     android:layout_marginTop="0dp"
     android:src="@drawable/donorlink"
     />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/description"
         android:textColor="#000"
         android:textSize="20sp"
         android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="vertical"
          android:layout_marginBottom="20dp"
          >
<Button
    android:id="@+id/donorButton"
    android:text="@string/dReg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textColor="#fff"
    android:textSize="20sp"
    android:layout_marginTop="20dp"
    android:textAllCaps="false"
    android:background="@drawable/buttons_background"
    />

          <Button
              android:id="@+id/recipientButton"
              android:text="@string/rReg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textColor="#fff"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:textAllCaps="false"
              android:background="@drawable/buttons_background"
              />

          <TextView
              android:id="@+id/backButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/aReg"
              android:textSize="18sp"
              android:layout_marginTop="15dp"
              android:textColor="#000"
              android:textStyle="bold"
              android:gravity="center"/>
      </LinearLayout>
  </LinearLayout>

</androidx.cardview.widget.CardView>

  </LinearLayout>